#57: Fixed chart tooltip flickering
(cherry picked from commit da93e1b9d1794126b823ca7e7e50ec62c5a2d58c)

--- a/src/components/layouts/pages/results/summary/Summary.scss
+++ b/src/components/layouts/pages/results/summary/Summary.scss
@@ -14,6 +14,11 @@
   &__chart {
     @include centered-column;
     height: 300px;
+
+    // Remove chart tooltip flickering
+    svg > g > g:last-child {
+      pointer-events: none
+    }
   }
 
   &__compliance {
